// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker should render 1`] = `
.c3 {
  font-size: 4rem;
  text-align: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 40px;
  border: 1px solid #0f181c;
  background: #0f181c;
  padding: 1.25em;
  color: #999;
  font-weight: bold;
  border-radius: 4px;
  cursor: pointer;
}

.c2 {
  font-size: 1.5em;
  margin-right: 1em;
}

.c0 .react-datepicker {
  border-color: black;
  background: #0f181c;
  padding: 1em;
}

.c0 .react-datepicker-wrapper {
  width: 100%;
}

.c0 .react-datepicker__header {
  background: #0f181c;
  border-bottom: none;
}

.c0 .react-datepicker__navigation {
  top: 40px;
}

.c0 .react-datepicker__navigation--previous {
  left: 15px;
}

.c0 .react-datepicker__navigation--next {
  right: 15px;
}

.c0 .react-datepicker__triangle {
  display: none;
}

.c0 .react-datepicker__current-month {
  color: #999;
  margin: 0;
  border: 1px solid black;
  padding: 0.25rem;
  height: 40px;
  line-height: 40px;
}

.c0 .react-datepicker__month {
  margin: 0;
}

.c0 .react-datepicker__week {
  border-bottom: 1px solid black;
  border-left: 1px solid black;
}

.c0 .react-datepicker__day-names {
  border-bottom: 1px solid black;
}

.c0 .react-datepicker__day-name {
  color: #999;
  margin: 0;
  border-right: 1px solid black;
  padding: 0.25rem;
}

.c0 .react-datepicker__day-name:first-child {
  border-left: 1px solid black;
}

.c0 .react-datepicker__day {
  color: #999;
  border-radius: 0;
  border-right: 1px solid black;
  margin: 0;
  padding: 0.25rem;
}

.c0 .react-datepicker__day--selected {
  background: #90ee7e;
  color: black;
}

.c0 .react-datepicker__day--keyboard-selected {
  background: none;
}

.c0 .react-datepicker__day:hover {
  color: black;
}

.c0 .react-datepicker__day--outside-month {
  color: transparent;
  pointer-events: none;
}

<div
  className="c0"
>
  <div
    className="react-datepicker-wrapper"
  >
    <div
      className="react-datepicker__input-container"
    >
      <button
        className="c1"
        onClick={[Function]}
      >
        <span
          className="c2 c3 lni lni-calendar"
        />
        26.06.2020
      </button>
    </div>
  </div>
</div>
`;

exports[`DatePicker should render DatePicker with custom dateFormat 1`] = `
.c3 {
  font-size: 4rem;
  text-align: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 40px;
  border: 1px solid #0f181c;
  background: #0f181c;
  padding: 1.25em;
  color: #999;
  font-weight: bold;
  border-radius: 4px;
  cursor: pointer;
}

.c2 {
  font-size: 1.5em;
  margin-right: 1em;
}

.c0 .react-datepicker {
  border-color: black;
  background: #0f181c;
  padding: 1em;
}

.c0 .react-datepicker-wrapper {
  width: 100%;
}

.c0 .react-datepicker__header {
  background: #0f181c;
  border-bottom: none;
}

.c0 .react-datepicker__navigation {
  top: 40px;
}

.c0 .react-datepicker__navigation--previous {
  left: 15px;
}

.c0 .react-datepicker__navigation--next {
  right: 15px;
}

.c0 .react-datepicker__triangle {
  display: none;
}

.c0 .react-datepicker__current-month {
  color: #999;
  margin: 0;
  border: 1px solid black;
  padding: 0.25rem;
  height: 40px;
  line-height: 40px;
}

.c0 .react-datepicker__month {
  margin: 0;
}

.c0 .react-datepicker__week {
  border-bottom: 1px solid black;
  border-left: 1px solid black;
}

.c0 .react-datepicker__day-names {
  border-bottom: 1px solid black;
}

.c0 .react-datepicker__day-name {
  color: #999;
  margin: 0;
  border-right: 1px solid black;
  padding: 0.25rem;
}

.c0 .react-datepicker__day-name:first-child {
  border-left: 1px solid black;
}

.c0 .react-datepicker__day {
  color: #999;
  border-radius: 0;
  border-right: 1px solid black;
  margin: 0;
  padding: 0.25rem;
}

.c0 .react-datepicker__day--selected {
  background: #90ee7e;
  color: black;
}

.c0 .react-datepicker__day--keyboard-selected {
  background: none;
}

.c0 .react-datepicker__day:hover {
  color: black;
}

.c0 .react-datepicker__day--outside-month {
  color: transparent;
  pointer-events: none;
}

<div
  className="c0"
>
  <div
    className="react-datepicker-wrapper"
  >
    <div
      className="react-datepicker__input-container"
    >
      <button
        className="c1"
        onClick={[Function]}
      >
        <span
          className="c2 c3 lni lni-calendar"
        />
        06/26/2020
      </button>
    </div>
  </div>
</div>
`;
